@@ -3,11 +3,10 @@ package Manager;
 import Models.Task;
 
 import java.util.ArrayList;
-import java.util.LinkedList;
 
 public class InMemoryHistoryManager implements HistoryManager {
     // здесь храним поступающие таски
-    private final LinkedList<Task> watchedTasksList = new LinkedList<>();
+    private final ArrayList<Task> watchedTasksList = new ArrayList<>();
 
     // метод добавляет таску в список
     // если тасок уже больше 10, то удаляем первую
@@ -15,14 +14,14 @@ public class InMemoryHistoryManager implements HistoryManager {
     public void add(Task task) {
         watchedTasksList.add(task);
         if(watchedTasksList.size()>10){
-            watchedTasksList.removeFirst();
+            watchedTasksList.remove(0);
         }
     }
 
     // получить этот список из 10 последних тасок
     @Override
     public ArrayList<Task> getHistory() {
-        return null;
+        return watchedTasksList;
     }
 
     // красиво вывести этот список на экран
@@ -30,4 +29,7 @@ public class InMemoryHistoryManager implements HistoryManager {
     public String toString() {
         return "Последние 10 тасок: " + watchedTasksList;
     }
+
+    // должен помечать задачи как просмотренные
+    // ArrayList getHistory = new ArrayList<Task>();
 }
